update add test

--- a/.ebextensions/01_server_setup.config
+++ b/.ebextensions/01_server_setup.config
@@ -8,7 +8,9 @@ files:
       /var/app/current/storage/logs/*.log
 
 container_commands:
-  01_composer_install:
+  01_install-pglib:
+      command: "yum install -y gettext intl pdo pdo_pgsql pgsql"
+  02_composer_install:
     command: "composer.phar install --no-dev"
     cwd: /var/app/staging
 #  02_run_migrations:
