update add test2

--- a/.ebextensions/01_server_setup.config
+++ b/.ebextensions/01_server_setup.config
@@ -9,7 +9,8 @@ files:
 
 container_commands:
   01_install-pglib:
-      command: "yum install -y gettext intl pdo pdo_pgsql pgsql"
+    command: "yum install -y gettext intl pdo pdo_pgsql pgsql"
+    cwd: /var/app/staging
   02_composer_install:
     command: "composer.phar install --no-dev"
     cwd: /var/app/staging
