update add test3

--- a/.ebextensions/01_server_setup.config
+++ b/.ebextensions/01_server_setup.config
@@ -8,8 +8,14 @@ files:
       /var/app/current/storage/logs/*.log
 
 container_commands:
-  01_install-pglib:
-    command: "yum install -y gettext intl pdo pdo_pgsql pgsql"
+  01_install_amazon_linux_extras:
+    command: "sudo yum install -y amazon-linux-extras"
+    cwd: /var/app/staging
+  02_install_amazon_linux_extras:
+    command: "sudo amazon-linux-extras install postgresql10"
+    cwd: /var/app/staging
+  02_install_amazon_linux_extras:
+    command: "pip3 install --force-reinstall psycopg2==2.93"
     cwd: /var/app/staging
   02_composer_install:
     command: "composer.phar install --no-dev"
