update add test5

--- a/.ebextensions/01_server_setup.config
+++ b/.ebextensions/01_server_setup.config
@@ -14,10 +14,10 @@ container_commands:
   02_install_amazon_linux_extras:
     command: "sudo amazon-linux-extras install postgresql10"
     cwd: /var/app/staging
-  02_install_amazon_linux_extras:
-    command: "pip3 install --force-reinstall psycopg2==2.93"
-    cwd: /var/app/staging
-  02_composer_install:
+#   03_install_amazon_linux_extras:
+#     command: "pip3 install --force-reinstall psycopg2==2.93"
+#     cwd: /var/app/staging
+  04_composer_install:
     command: "composer.phar install --no-dev"
     cwd: /var/app/staging
 #  02_run_migrations:
